--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,5 +7,16 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
-
+    <style name="bottom_tab_style">
+    <item name="android:layout_width">0dip</item>
+    <item name="android:layout_height">wrap_content</item>
+    <item name="android:layout_gravity">center_vertical</item>
+    <item name="android:layout_weight">1</item>
+    <item name="android:button">@android:color/transparent</item>
+    <item name="android:background">@android:color/transparent</item>
+    <item name="android:drawablePadding">1dip</item>
+    <item name="android:gravity">center</item>
+    <item name="android:textColor">@drawable/bottom_tab_textcolor_main</item>
+    <item name="android:textSize">12sp</item>
+    </style>
 </resources>
