--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -6,7 +6,11 @@
     android:layout_height="match_parent"
     android:background="#ffffff"
     android:orientation="vertical">
-
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/id_toolbar"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:background="?attr/colorPrimary"/>
     <android.support.v4.view.ViewPager
         android:id="@+id/vp_content_fragment"
         android:layout_width="match_parent"
