--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,7 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="actionOverflowButtonStyle">@style/OverflowButtonStyle</item>
     </style>
     <style name="bottom_tab_style">
     <item name="android:layout_width">0dip</item>
@@ -18,5 +19,8 @@
     <item name="android:gravity">center</item>
     <item name="android:textColor">@drawable/bottom_tab_textcolor_main</item>
     <item name="android:textSize">12sp</item>
+    </style>
+    <style name="OverflowButtonStyle" parent="@android:style/Widget.ActionButton.Overflow">
+        <item name="android:src">@mipmap/ic_launcher</item>
     </style>
 </resources>
