--- a/app/src/main/res/menu/test.xml
+++ b/app/src/main/res/menu/test.xml
@@ -4,17 +4,28 @@
     tools:context=".MainActivity">
     <item
         android:id="@+id/action_publish"
+
         android:title="发表"
-        app:showAsAction="always"/>
+        app:showAsAction="never" />
     <item
         android:id="@+id/action_pick_pic"
         android:title="选择图片"
-        android:icon="@mipmap/ic_launcher"
-        app:showAsAction="never"/>
+        app:showAsAction="withText"
+        android:icon="@mipmap/ic_launcher"/>
     <item
         android:id="@+id/action_take_pic"
         android:title="照相"
-        android:icon="@mipmap/ic_launcher"
-        app:showAsAction="never"/>
-
+        app:showAsAction="never" />
+   <item
+        android:id="@+id/ab_search"
+        android:orderInCategory="80"
+        android:title="action_search"
+        app:actionViewClass="android.support.v7.widget.SearchView"
+        app:showAsAction="always"/>
+    <!-- <item
+        android:id="@+id/action_share"
+        android:orderInCategory="90"
+        android:title="action_share"
+        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
+        app:showAsAction="always"/>-->
 </menu>
