--- a/app/src/main/res/layout/fragment_daily.xml
+++ b/app/src/main/res/layout/fragment_daily.xml
@@ -6,8 +6,15 @@
     android:layout_height="match_parent"
     android:background="#ffffff"
     android:orientation="vertical">
-  <TextView
+  <android.support.v4.widget.SwipeRefreshLayout
+      xmlns:android="http://schemas.android.com/apk/res/android"
+      android:id="@+id/swiperefresh"
       android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:text="dailyfragment"/>
+      android:layout_height="match_parent">
+    <ListView
+        android:id="@android:id/list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+  </android.support.v4.widget.SwipeRefreshLayout>
 </LinearLayout>
