2016726Listview完善2（需要优化，异步加载数据）

--- a/app/src/main/res/layout/base_paper.xml
+++ b/app/src/main/res/layout/base_paper.xml
@@ -11,6 +11,9 @@
         android:id="@+id/fl_base_paper_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
+<TextView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:text="测试"/>
     </FrameLayout>
 </LinearLayout>
