--- a/app/src/main/res/layout/fragment_daily.xml
+++ b/app/src/main/res/layout/fragment_daily.xml
@@ -6,15 +6,21 @@
     android:layout_height="match_parent"
     android:background="#ffffff"
     android:orientation="vertical">
-  <android.support.v4.widget.SwipeRefreshLayout
+  <TextView
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:textSize="40dp"
+      android:text="ceshi"/>
+ <!-- <android.support.v4.widget.SwipeRefreshLayout
       xmlns:android="http://schemas.android.com/apk/res/android"
       android:id="@+id/swiperefresh"
       android:layout_width="match_parent"
       android:layout_height="match_parent">
+-->
     <ListView
         android:id="@+id/listview"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-  </android.support.v4.widget.SwipeRefreshLayout>
+<!--  </android.support.v4.widget.SwipeRefreshLayout>-->
 </LinearLayout>
