--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -17,7 +17,7 @@
             android:src="@mipmap/ic_launcher" />
 
         <TextView
-            android:id="@+id/text"
+            android:id="@+id/text_content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -25,6 +25,7 @@
             android:text="测试测试测试测试测试测试" />
     </LinearLayout>
     <ImageView
+        android:id="@+id/image_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:src="@mipmap/ic_launcher"/>
@@ -33,25 +34,28 @@
         android:orientation="horizontal"
         android:layout_height="wrap_content">
         <Button
-            android:id="@+id/button1"
+            android:id="@+id/button_like"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="赞"
             android:layout_weight="1"
            />
         <Button
+            android:id="@+id/button_dislike"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="反对"
             android:layout_weight="1"
            />
         <Button
+            android:id="@+id/button_share"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="分享"
             android:layout_weight="1"
            />
         <Button
+            android:id="@+id/button_comment"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="评论"
