--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -23,12 +23,20 @@
             android:layout_gravity="center"
             android:paddingLeft="30dp"
             android:text="测试测试测试测试测试测试" />
+        <TextView
+            android:id="@+id/gifcontenturl"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:paddingLeft="30dp"
+            android:text="gifcontenturl" />
     </LinearLayout>
-    <ImageView
-        android:id="@+id/image_content"
-        android:layout_width="match_parent"
+    <pl.droidsonroids.gif.GifImageView
+        android:id="@+id/gif"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@mipmap/ic_launcher"/>
+        android:src="@drawable/haha"
+        />
     <LinearLayout
         android:layout_width="match_parent"
         android:orientation="horizontal"
