--- a/app/src/main/res/layout/fragment_test.xml
+++ b/app/src/main/res/layout/fragment_test.xml
@@ -10,14 +10,12 @@
       android:id="@+id/gif"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:src="@drawable/haha"
+
       />
-  <pl.droidsonroids.gif.GifTextView
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:drawableTop="@drawable/animated"
-     android:text="测试啊啊啊啊啊啊"
-      android:background="@drawable/animated"
-      />
-  <!--android:background="@drawable/bg_anim"-->
+<ImageView
+    android:id="@+id/image"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    />
+
 </LinearLayout>
