--- a/app/src/main/res/layout/fragment_test.xml
+++ b/app/src/main/res/layout/fragment_test.xml
@@ -10,12 +10,11 @@
       android:id="@+id/gif"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-
+      android:src="@drawable/haha"
       />
-<ImageView
-    android:id="@+id/image"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    />
-
+  <ImageView
+      android:id="@+id/image"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      />
 </LinearLayout>
