--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -23,6 +23,7 @@
             android:layout_gravity="center"
             android:paddingLeft="30dp"
             android:text="测试测试测试测试测试测试" />
+
         <TextView
             android:id="@+id/gifcontenturl"
             android:layout_width="wrap_content"
@@ -31,49 +32,51 @@
             android:paddingLeft="30dp"
             android:text="gifcontenturl" />
     </LinearLayout>
-    <pl.droidsonroids.gif.GifImageView
-        android:id="@+id/gif"
+
+    <ImageView
+        android:id="@+id/imagegif"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/haha"
-        />
+        android:src="@mipmap/ic_launcher" />
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:orientation="horizontal"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
         <Button
             android:id="@+id/button_like"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="赞"
             android:layout_weight="1"
-           />
+            android:text="赞" />
+
         <Button
             android:id="@+id/button_dislike"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="反对"
             android:layout_weight="1"
-           />
+            android:text="反对" />
+
         <Button
             android:id="@+id/button_share"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="分享"
             android:layout_weight="1"
-           />
+            android:text="分享" />
+
         <Button
             android:id="@+id/button_comment"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="评论"
             android:layout_weight="1"
-            />
+            android:text="评论" />
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:background="#33447788"
-        android:layout_height="6dp">
+        android:layout_height="6dp"
+        android:background="#33447788">
 
     </LinearLayout>
 </LinearLayout>
