2016726Listview完善7（需要优化，异步加载数据）gif图测试3

--- a/app/src/main/res/layout/fragment_daily.xml
+++ b/app/src/main/res/layout/fragment_daily.xml
@@ -18,11 +18,11 @@
             android:layout_height="match_parent" />
 
     </android.support.v4.widget.SwipeRefreshLayout>
-    <pl.droidsonroids.gif.GifImageView
+   <!-- <pl.droidsonroids.gif.GifImageView
         android:layout_centerInParent="true"
         android:id="@+id/empty_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@mipmap/loding"
-        />
+        />-->
 </RelativeLayout>
