--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -31,7 +31,8 @@
     <ImageView
         android:id="@+id/imagegif"
         android:layout_width="match_parent"
-        android:layout_height="400dp"
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
 
         />
     <LinearLayout
