--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/content_ui"
-    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#ffffff"
@@ -11,42 +10,40 @@
         android:id="@+id/vp_content_fragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1">
-    </android.support.v4.view.ViewPager>
+        android:layout_weight="1"></android.support.v4.view.ViewPager>
 
-    <LinearLayout
+    <ImageView
         android:layout_width="fill_parent"
-        android:layout_height="1dip"
-        android:layout_marginBottom="5dip"
-
-        android:background="#EEEEE0"/>
+        android:layout_height="wrap_content"
+        android:src="@drawable/shadow_line_webview_top"
+         />
 
     <RadioGroup
         android:id="@+id/rg_content_fragment"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
         android:background="#FFFFFFFF"
-        android:orientation="horizontal"
-        >
+        android:orientation="horizontal">
 
         <RadioButton
             android:id="@+id/rb_main_fragment_daily"
             style="@style/bottom_tab_style"
             android:drawableTop="@drawable/bottom_home_tab_bg"
-            android:text="每日"/>
+            android:text="每日" />
 
         <RadioButton
             android:id="@+id/rb_main_fragment_game"
             style="@style/bottom_tab_style"
             android:drawableTop="@drawable/bottom_notify_tab_bg"
-            android:text="鱼乐"/>
+            android:text="鱼乐" />
 
         <RadioButton
             android:id="@+id/rb_main_fragment_knowledge"
             style="@style/bottom_tab_style"
             android:drawableTop="@drawable/bottom_social_tab_bg"
-            android:text="姿势"/>
+            android:text="姿势" />
 
         <RadioButton
             android:id="@+id/rb_main_fragment_my"
