--- a/app/src/main/res/layout/item_list2.xml
+++ b/app/src/main/res/layout/item_list2.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+     android:layout_width="match_parent"
     android:layout_height="match_parent">
 <TextView
     android:id="@+id/text"
@@ -8,7 +8,9 @@
     android:layout_height="wrap_content"
     android:text="测试"/>
     <TextView
+        android:id="@+id/text_content"
+        android:layout_gravity="bottom"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="样式2"/>
-</LinearLayout>
+</FrameLayout>
