--- a/app/src/main/res/layout/item_books.xml
+++ b/app/src/main/res/layout/item_books.xml
@@ -30,12 +30,11 @@
 
             <TextView
                 android:id="@+id/text_content"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:paddingLeft="30dp"
-                android:background="#22000000"
-                 />
+                android:text="测试测试测试测试测试测试" />
 
 
         </LinearLayout>
