--- a/app/src/main/res/layout/item_daily_with_text.xml
+++ b/app/src/main/res/layout/item_daily_with_text.xml
@@ -34,18 +34,20 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:paddingLeft="30dp"
-                android:textSize="18sp"
-                 />
+                />
 
 
         </LinearLayout>
 
-        <ImageView
-            android:id="@+id/image_gif"
+        <TextView
+            android:id="@+id/text_joke"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:paddingLeft="5dp"
+            android:textSize="24sp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:adjustViewBounds="true"
-            android:src="@mipmap/ic_launcher" />
+             />
 
         <LinearLayout
             android:layout_width="match_parent"
