--- a/app/src/main/res/layout/item_with_data.xml
+++ b/app/src/main/res/layout/item_with_data.xml
@@ -8,11 +8,10 @@
 
     <TextView
         android:id="@+id/base_swipe_group_item_time"
-        android:layout_width="wrap_content"
-        android:layout_height="30dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:gravity="center_vertical"
-        android:text="2016-8-23"
         android:textSize="17sp" />
 
     <include layout="@layout/item_daily"></include>
