--- a/app/src/main/res/layout/comment_activity.xml
+++ b/app/src/main/res/layout/comment_activity.xml
@@ -22,28 +22,37 @@
 
         </android.support.v7.widget.Toolbar>
     </android.support.design.widget.AppBarLayout>
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/comment_recyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
-    </android.support.v7.widget.RecyclerView>
+   <ListView
+       android:paddingTop="58dp"
+       android:id="@+id/comment_listview"
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content">
+   </ListView>
+   <TextView
+       android:id="@+id/tv_empty"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:layout_gravity="center"
+       android:textSize="17sp"
+       android:text="还没有人评论，快来抢沙发吧"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_gravity="bottom">
         <EditText
+            android:id="@+id/et_comment"
             android:layout_width="0dp"
             android:layout_weight="4"
-            android:layout_height="wrap_content"
+            android:layout_height="58dp"
             android:hint="评论"
+            android:background="@android:color/white"
             android:textColor="@android:color/black" />
         <Button
+            android:id="@+id/bt_commit"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="wrap_content"
+            android:layout_height="58dp"
             android:textSize="17sp"
             android:text="发送"/>
     </LinearLayout>
