--- a/app/src/main/res/layout/comment_activity.xml
+++ b/app/src/main/res/layout/comment_activity.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white"
+    android:background="#00555555"
     android:orientation="vertical">
 
     <android.support.design.widget.AppBarLayout
@@ -22,12 +22,21 @@
 
         </android.support.v7.widget.Toolbar>
     </android.support.design.widget.AppBarLayout>
-   <ListView
-       android:paddingTop="58dp"
-       android:id="@+id/comment_listview"
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content">
-   </ListView>
+    <android.support.v4.widget.SwipeRefreshLayout
+       android:layout_marginTop="58dp"
+        android:id="@+id/SwipeRefreshLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+        <ListView
+            android:id="@+id/comment_listview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+        </ListView>
+
+    </android.support.v4.widget.SwipeRefreshLayout>
+
    <TextView
        android:id="@+id/tv_empty"
        android:layout_width="wrap_content"
@@ -39,20 +48,20 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:background="@android:color/white"
         android:layout_gravity="bottom">
         <EditText
             android:id="@+id/et_comment"
             android:layout_width="0dp"
             android:layout_weight="4"
-            android:layout_height="58dp"
+            android:layout_height="wrap_content"
             android:hint="评论"
-            android:background="@android:color/white"
             android:textColor="@android:color/black" />
         <Button
             android:id="@+id/bt_commit"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="58dp"
+            android:layout_height="wrap_content"
             android:textSize="17sp"
             android:text="发送"/>
     </LinearLayout>
