--- a/app/src/main/res/layout/item_daily_with_text.xml
+++ b/app/src/main/res/layout/item_daily_with_text.xml
@@ -44,8 +44,9 @@
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
             android:paddingLeft="5dp"
-            android:textSize="24sp"
+            android:textSize="21sp"
             android:layout_width="match_parent"
+            android:textStyle="normal"
             android:layout_height="wrap_content"
              />
 
