--- a/app/src/main/res/layout/comment_activity.xml
+++ b/app/src/main/res/layout/comment_activity.xml
@@ -47,7 +47,7 @@
        android:text="还没有人评论，快来抢沙发吧"/>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="58dp"
+        android:layout_height="48dp"
         android:orientation="horizontal"
         android:background="@android:color/white"
         android:layout_gravity="bottom">
@@ -55,14 +55,15 @@
             android:id="@+id/et_comment"
             android:layout_width="0dp"
             android:layout_weight="4"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:hint="评论"
             android:textColor="@android:color/black" />
         <Button
             android:id="@+id/bt_commit"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="wrap_content"
+            android:theme="@style/MyButton"
+            android:layout_height="match_parent"
             android:textSize="17sp"
             android:text="发送"/>
     </LinearLayout>
