--- a/app/src/main/res/layout/item_daily_with_text.xml
+++ b/app/src/main/res/layout/item_daily_with_text.xml
@@ -61,6 +61,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:theme="@style/MyButton"
                 android:text="赞" />
 
             <Button
@@ -68,6 +69,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:theme="@style/MyButton"
                 android:text="反对" />
 
             <Button
@@ -75,6 +77,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:theme="@style/MyButton"
                 android:text="分享" />
 
             <Button
@@ -82,6 +85,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:theme="@style/MyButton"
                 android:text="评论" />
         </LinearLayout>
     </LinearLayout>
