--- a/app/src/main/res/layout/video_play.xml
+++ b/app/src/main/res/layout/video_play.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -13,6 +13,7 @@
         app:navigationIcon="?attr/homeAsUpIndicator"
         app:theme="@style/Theme.AppCompat.NoActionBar"/>
     <RelativeLayout
+        android:layout_below="@id/toolbar"
         android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="400dp">
@@ -37,7 +38,7 @@
 
 
     <LinearLayout
-        android:layout_marginBottom="100dp"
+
         android:layout_gravity="center"
         android:gravity="center"
         android:id="@+id/linearLayout1"
@@ -48,15 +49,38 @@
             android:id="@+id/play"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:visibility="gone"
             android:text="播放" />
 
-
-
         <Button
+            android:visibility="gone"
             android:id="@+id/stop"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="停止" />
     </LinearLayout>
 
-</LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_alignParentBottom="true"
+        android:layout_height="48dp"
+        android:orientation="horizontal"
+        android:background="@android:color/white"
+       >
+        <EditText
+            android:id="@+id/et_comment"
+            android:layout_width="0dp"
+            android:layout_weight="4"
+            android:layout_height="match_parent"
+            android:hint="评论"
+            android:textColor="@android:color/black" />
+        <Button
+            android:id="@+id/bt_commit"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:theme="@style/MyButton"
+            android:layout_height="match_parent"
+            android:textSize="17sp"
+            android:text="发送"/>
+    </LinearLayout>
+</RelativeLayout>
